foi alterdo o código do site

--- a/FOOD-LOVER-WEBSITE/index.html
+++ b/FOOD-LOVER-WEBSITE/index.html
@@ -327,7 +327,7 @@
                 <h1 class="modal_title">Em Construção!</h1>
                 <p class="modal_description">Este Website Está Em Construção</p>
                 <button class="modal_button modal_button-width close-modal">
-                    Fechar
+                    <script src="script.js"></script>
                 </button>
             </div>
         </div>
