foi feito alteração no index.html

--- a/FOOD-LOVER-WEBSITE/index.html
+++ b/FOOD-LOVER-WEBSITE/index.html
@@ -333,6 +333,6 @@
         </div>
     </section>
    <!-- QUAL CODIGO DEVO COLOCAR AQUI NESTE ESPAÇO PARA O SITE RODAR ? -->
-   <script src="script.js"></script>
+   <script src="js/main.min.js"></script>
 </body>
 </html>
